test/speg_grammar_fixtures/valid/rule_call_numbers.peg
GRAMMAR url

a -> b1 b2 b3 b999;
b1 -> "test";
b2 -> "test";
b3 -> "test";
b999 -> "test";
