test/speg_grammar_fixtures/invalid/rule_numbers_at_start.peg
GRAMMAR numbers_at_start

a -> 1b b2 b3 b999;
1b -> "test";
b2 -> "test";
b3 -> "test";
b999 -> "test";
